# meson-issue

./: lib.h  main.c  meson.build  readme.txt  stacktrace.txt
